<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="125dp">

        <RelativeLayout
            android:id="@+id/botones_calculadora"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/first_text_view"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/cero_text"
                android:textAlignment="viewEnd"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/resta_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/resta_text"
                android:layout_above="@+id/siete_button"
                android:layout_toLeftOf="@+id/suma_button"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/suma_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/suma_text"
                android:layout_above="@+id/ocho_button"
                android:layout_centerHorizontal="true"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/producto_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/producto_text"
                android:layout_above="@+id/nueve_button"
                android:layout_toRightOf="@+id/suma_button"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/divicion_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/divicion_text"
                android:layout_above="@+id/suma_button"
                android:layout_toLeftOf="@+id/borrar_button"
                android:onClick="setMyTextView"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/borrar_todo_text"
                android:layout_above="@+id/producto_button"
                android:layout_toRightOf="@+id/borrar_button"
                android:onClick="eliminarTodo"/>

            <Button
                android:id="@+id/borrar_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/borrar_text"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/suma_button"
                android:onClick="eliminarUno"/>

            <Button
                android:id="@+id/cero_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_centerInParent="true"
                android:text="@string/cero_text"
                android:onClick="setMyTextView"
                />

            <Button
                android:id="@+id/uno_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_above="@+id/cero_button"
                android:layout_toLeftOf="@+id/dos_button"
                android:text="@string/uno_text"
                android:onClick="setMyTextView"
                />

            <Button
                android:id="@+id/dos_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_above="@+id/cero_button"
                android:layout_centerHorizontal="true"
                android:text="@string/dos_text"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/tres_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_above="@+id/cero_button"
                android:layout_toRightOf="@+id/dos_button"
                android:text="@string/tres_text"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/cuatro_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_above="@+id/uno_button"
                android:layout_toLeftOf="@+id/cinco_button"
                android:text="@string/cuatro_text"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/cinco_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_above="@+id/dos_button"
                android:layout_centerHorizontal="true"
                android:text="@string/cinco_text"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/seis_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_above="@+id/tres_button"
                android:layout_toRightOf="@+id/cinco_button"
                android:text="@string/seis_text"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/siete_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_above="@+id/cuatro_button"
                android:layout_toLeftOf="@id/ocho_button"
                android:text="@string/siete_text"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/ocho_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_above="@+id/cinco_button"
                android:layout_centerHorizontal="true"
                android:text="@string/ocho_text"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/nueve_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_above="@+id/seis_button"
                android:layout_toRightOf="@+id/ocho_button"
                android:text="@string/nueve_text"
                android:onClick="setMyTextView"/>

            <Button
                android:id="@+id/igual_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_below="@+id/tres_button"
                android:layout_toRightOf="@+id/cero_button"
                android:text="@string/igual_text"
                android:onClick="calcular"/>

            <Button
                android:id="@+id/decimal_button"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_below="@+id/uno_button"
                android:layout_toLeftOf="@+id/cero_button"
                android:text="@string/decimal_text"
                android:onClick="setMyTextView"/>

        </RelativeLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>